# P1_Minefields

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  experiments.c  experiments.h  lib.h  main.c  minefield_algorithms.c  minefield_algorithms.h  minefields.c  minefields.h  minelib.c  minelib.h
src/experiments/: CMakeLists.txt  experiments.c  experiments.h
src/minefield_algorithms/: CMakeLists.txt  minefield_algorithms.c  minefield_algorithms.h
src/minefields/: CMakeLists.txt  minefields.c  minefields.h
test/: CMakeLists.txt  test_minefields.c
